# testCPP

./: Attente.cpp  Attente.h  Battle.cpp  Battle.h  CMakeLists.txt  Danger.cpp  Danger.h  EndGame.cpp  EndGame.h  Game.cpp  Game.h  Init.cpp  Init.h  NoDanger.cpp  NoDanger.h  Player.cpp  Player.h  Pokeball.cpp  Pokeball.h  Pokedex.cpp  Pokedex.h  Pokemon.cpp  Pokemon.h  PokemonParty.cpp  PokemonParty.h  README.md  SetOfPokemon.cpp  SetOfPokemon.h  State.cpp  State.h  main.cpp
